--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+# IntelliJ IDEA specific files
+/.idea/
+/*.iml
+/out/
+*.ipr
+*.iws
+*.iml
+
 # Compiled class file
 *.class
 
-# Log file
+# Log files
 *.log
 
 # BlueJ files
@@ -10,7 +18,7 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package files
 *.jar
 *.war
 *.nar
@@ -19,8 +27,44 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
 
+# Spring Boot specific
+/spring.log
+
+# Maven specific
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Gradle specific
+.gradle
+build/
+!gradle-wrapper.jar
+.gradle/
+build/
+out/
+
+# Eclipse specific files
+/.settings/
+/.project
+/.classpath
+
+# OS generated files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+
+# Temporary notes or files
 *notes*
+*.tmp
+*.bak
+*.swp
+*.old
+*.orig
