--- a/.github/workflows/sonarqube-analysis.yml
+++ b/.github/workflows/sonarqube-analysis.yml
@@ -35,7 +35,7 @@ jobs:
 #        run: mvn clean verify
 
       - name: Test SonarQube Server Connectivity
-        run: curl -v http://server.kode19.com:9000
+        run: curl -v http://34.41.172.81:9000
 
       # Step 5: Run SonarQube Scan with Coverage
       - name: Upload JaCoCo Coverage to SonarQube
