--- a/.github/workflows/sonarqube-analysis.yml
+++ b/.github/workflows/sonarqube-analysis.yml
@@ -34,8 +34,8 @@ jobs:
 #      - name: Run Tests with Coverage
 #        run: mvn clean verify
 
-      - name: Test SonarQube Server Connectivity
-        run: curl -v http://34.41.172.81:9000
+#      - name: Test SonarQube Server Connectivity
+#        run: curl -v http://34.41.172.81:9000
 
       # Step 5: Run SonarQube Scan with Coverage
       - name: Upload JaCoCo Coverage to SonarQube
